--- a/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
+++ b/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
   <application
     android:name=".App"
@@ -19,23 +20,31 @@
     android:theme="@style/AppTheme"
     android:uiOptions="splitActionBarWhenNarrow"
     tools:ignore="GoogleAppIndexingWarning">
-    <activity android:name=".activities.ProgramActivity"
-              android:screenOrientation="landscape"></activity>
+    <activity android:name=".activities.DataSelectActivity"
+      android:screenOrientation="landscape"></activity>
+    <activity android:name=".activities.SignActivity"
+      android:screenOrientation="landscape"/>
+    <activity android:name=".activities.FirstDiaryActivity"
+      android:screenOrientation="landscape"/>
+    <activity
+      android:name=".activities.ProgramActivity"
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.MetsActivity"
-      android:screenOrientation="landscape"></activity>
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.FourthActivity"
-      android:screenOrientation="landscape"></activity>
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.ThirdActivity"
-      android:screenOrientation="landscape"></activity>
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.SecondActivity"
-      android:screenOrientation="landscape"></activity>
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.MainActivity"
-      android:screenOrientation="landscape"></activity>
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.StartActivity"
       android:label="@string/app_name"
@@ -50,7 +59,7 @@
     <activity
       android:name=".activities.ItemListActivity"
       android:label="@string/app_name"
-      android:screenOrientation="landscape"></activity>
+      android:screenOrientation="landscape" />
 
     <provider
       android:name="androidx.core.content.FileProvider"
@@ -61,6 +70,10 @@
         android:name="android.support.FILE_PROVIDER_PATHS"
         android:resource="@xml/file_paths" />
     </provider>
+
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyAUTw3tg_0gL0DIb8TJa_kcK5Kw8Fnfx3I" />
   </application>
 
 </manifest>
