--- a/packages/WalkingPromotor/app/build.gradle
+++ b/packages/WalkingPromotor/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.2'
     implementation 'com.google.maps.android:android-maps-utils:0.4'
     implementation 'com.google.code.gson:gson:2.3.1'
+    implementation "androidx.cardview:cardview:1.0.0"
     api files('libs/NCMB.jar')
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:4.3.1'
