--- a/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
+++ b/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
@@ -20,19 +20,43 @@
     android:theme="@style/AppTheme"
     android:uiOptions="splitActionBarWhenNarrow"
     tools:ignore="GoogleAppIndexingWarning">
-    <activity android:name=".activities.DataSelectActivity"
-      android:screenOrientation="landscape"></activity>
-    <activity android:name=".activities.SignActivity"
-      android:screenOrientation="landscape"/>
-    <activity android:name=".activities.FirstDiaryActivity"
-      android:screenOrientation="landscape"/>
+    <activity
+      android:name=".activities.DiaryUpActivity"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+    <activity
+      android:name=".activities.WalkValActivity"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+    <activity
+      android:name=".activities.DiaryMenuActivity"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+    <activity
+      android:name=".activities.HomeProgramActivity"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+    <activity
+      android:name=".activities.DataSelectActivity"
+      android:label="みんなの写真"
+      android:screenOrientation="landscape" />
+    <activity
+      android:name=".activities.SignActivity"
+      android:label="みんなで情報共有する"
+      android:screenOrientation="landscape" />
+    <activity
+      android:name=".activities.StartActivity"
+      android:label="ステップ練習"
+      android:screenOrientation="landscape" />
     <activity
       android:name=".activities.ProgramActivity"
-      android:screenOrientation="landscape" />
+      android:label="オンラインメニュー"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.MetsActivity"
-      android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-      android:screenOrientation="landscape" />
+      android:label="みんなの日記"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.FourthActivity"
       android:screenOrientation="landscape" />
@@ -41,13 +65,16 @@
       android:screenOrientation="landscape" />
     <activity
       android:name=".activities.SecondActivity"
-      android:screenOrientation="landscape" />
+      android:label="日記を書く"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.MainActivity"
+      android:label="目標設定"
       android:screenOrientation="landscape" />
     <activity
-      android:name=".activities.StartActivity"
-      android:label="@string/app_name"
+      android:name=".activities.FirstDiaryActivity"
+      android:label="スタートメニュー"
       android:screenOrientation="landscape">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
