--- a/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
+++ b/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
@@ -21,9 +21,13 @@
     android:uiOptions="splitActionBarWhenNarrow"
     tools:ignore="GoogleAppIndexingWarning">
     <activity
-      android:name=".activities.WalkProgramActivity"
+      android:name=".activities.DairyGraphActivity"
       android:screenOrientation="landscape"
       android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+    <activity
+      android:name=".activities.WalkProgramActivity"
+      android:screenOrientation="landscape"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.DiaryUpActivity"
       android:screenOrientation="landscape"
@@ -51,7 +55,7 @@
       android:name=".activities.StartActivity"
       android:label="ステップ練習"
       android:screenOrientation="landscape"
-      android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.ProgramActivity"
       android:label="オンラインメニュー"
@@ -77,7 +81,7 @@
       android:name=".activities.MainActivity"
       android:label="目標設定"
       android:screenOrientation="landscape"
-      android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     <activity
       android:name=".activities.FirstDiaryActivity"
       android:label="スタートメニュー"
