--- a/packages/WalkingPromotor/app/build.gradle
+++ b/packages/WalkingPromotor/app/build.gradle
@@ -19,6 +19,8 @@ android {
         versionCode 1
         versionName "1.0.0"
         multiDexEnabled true
+        buildConfigField("String", "APPLICATION_KEY", "\"${applicationKey}\"")
+        buildConfigField("String", "CLIENT_KEY", "\"${clientKey}\"")
     }
     buildTypes {
         debug {
