--- a/packages/WalkingPromotor/app/build.gradle
+++ b/packages/WalkingPromotor/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 repositories {
     jcenter()
@@ -59,11 +60,14 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.4'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     api files('libs/NCMB.jar')
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt "android.arch.lifecycle:compiler:1.1.1"
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
