--- a/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
+++ b/packages/WalkingPromotor/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
   <application
     android:name=".App"
     android:allowBackup="false"
-    android:icon="@drawable/icon"
+    android:icon="@mipmap/ic_launcher_round"
     android:label="@string/app_name"
     android:theme="@style/AppTheme"
     android:uiOptions="splitActionBarWhenNarrow"
